examples/cilium/sw_l3_l4_l7_policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rule1
spec:
  description: "L7 policy to restrict access to specific HTTP call"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        class: tiefighter
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: "/v1/"
        - method: POST
          path: "/v1/request-landing"
  - fromEndpoints:
    - matchLabels:
        class: xwing
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: "/v1/"
        - method: PUT
          path: "/v1/exhaust-port$"
          headers:
          - "X-Has-Force: True"
